tests/baselines/reference/ambiguousLiteralWideningEmit.errors.txt
ambiguousLiteralWideningEmit.ts(4,18): error TS2856: The type of this declaration is ambiguous and may be observed as either 'string | number' or 'string | 1'.
ambiguousLiteralWideningEmit.ts(4,29): error TS2856: The type of this declaration is ambiguous and may be observed as either 'string | number' or 'string | 1'.


==== ambiguousLiteralWideningEmit.ts (2 errors) ====
    declare function pad(n: number | string): string;
    
    export default (dateString: string, type: 'date' | 'month' | 'year'): string => {
        const [year, month = 1, date = 1] = dateString.split('-')
                     ~~~~~
!!! error TS2856: The type of this declaration is ambiguous and may be observed as either 'string | number' or 'string | 1'.
                                ~~~~
!!! error TS2856: The type of this declaration is ambiguous and may be observed as either 'string | number' or 'string | 1'.
        return `${year}-${pad(month)}-${pad(date)}`.substr(0, { date: 10, month: 7, year: 4 }[type])
    }
    